--- a/inst/docs/template.Rmd
+++ b/inst/docs/template.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "My Report"
 output: html_document
+resource_files:
+  plots/*
 ---
 
 Plot Bins: `r readRDS(file = "plots/plot_1-bins.Rds")`
